scrapyd/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: scrapyd
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scrapyd
  name: scrapyd
  namespace: scrapyd
spec:
  ports:
    - name: "6800"
      port: 6800
      targetPort: 6800
  selector:
    app: scrapyd
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scrapyd
  name: scrapyd
  namespace: scrapyd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrapyd
  revisionHistoryLimit: 0
  strategy: {}
  template:
    metadata:
      labels:
        app: scrapyd
    spec:
      containers:
        - image: germey/scrapyd
          name: scrapyd
          ports:
            - containerPort: 6800
          resources:
            requests:
              memory: "300Mi"
              cpu: "0.2"
            limits:
              memory: "600Mi"
              cpu: "0.4"
          volumeMounts:
            - mountPath: "/app"
              name: volume-scrapyd
      volumes:
        - name: volume-scrapyd
          persistentVolumeClaim:
            claimName: pvc-scrapyd
      restartPolicy: Always
status: {}
